# PageWeave

./: .dockerignore  .env_template  .gitignore  Dockerfile.runtime  README.md  README_DOCKER.md  agent.py  docker-compose.runtime.yml  main.py  models.py  models_qwen.py  pyproject.toml  review_node.py  runtime.py  schemas.py  subagents.py  test.py  visual_review_node.py  visual_review_node_v3.py
11e8711f-2fe9-499f-8241-4307ffd90c14/designs/: coder_page_tasks.json  (+3 more)
artifacts/: langgraph.mmd
contracts/: __init__.py  agent_contracts.py
frontend/: index.html  package-lock.json  package.json
prompts/: architect_draft_extractor_system_prompt.md  architect_navigation_planner_system_prompt.md  architect_page_merger_system_prompt.md  coder_baseline_system_prompt.md  coder_integration_system_prompt.md  coder_orchestrator_system_prompt.md  coder_page_system_prompt.md  coder_skeleton_system_prompt.md  flow_summary_system_prompt.md  review_executor_system_prompt.md  system_prompt.md  tester_system_prompt.md  visual_review_system_prompt.md
scripts/: compile.sh  install_dependencies.sh  reset_agent_workspace.sh  run_all_process_simple.py  run_process_simple.py  run_qqmail_test_stage.py  skill_qa_agent.py  test_tester_agent.py
tools/: __init__.py  architect_tools.py  coder_tools.py  common.py  human_guidance.py  json_tools.py  project_tools.py  review_flow_tools.py  routing_tools.py  tester_tools.py  tool_sets.py
utils/: checkpointing.py  graph_visualization.py  llm_utils.py  session_backend.py  session_context.py  session_workspace.py  user_input_preparation.py  utils.py
(+713 files in other folders)
